--- a/starter-code/new.html
+++ b/starter-code/new.html
@@ -54,10 +54,13 @@
                    4. Author's URL
                    5. Article category
                    6. Some way to know if this article is a draft or is published -->
-        <form>
-          <fieldset>
-            <legend>New Article<br>
-          </fieldset>
+        <form id="new-form">
+          <label><input type="text" id="article-title" placeholder="Article Title" required></label>
+          <label><textarea id="article-body" rows="8" cols="40" placeholder="Type your article here!!!" required></textarea></label>
+          <label><input type="text" id="article-author" placeholder="Author Name" required></label>
+          <label><input type="text" id="article-author-url" placeholder="Author's URL" required></label>
+          <label><input type="text" id="article-category" placeholder="Category" required></label>
+          <label><input type="checkbox" id="article-published">Published</label>
         </form>
       </section>
 
@@ -67,6 +70,10 @@
 
       <section id="article-export">
         <!-- TODO: Refer to the preview image to see what we will be building here: we need a container of some kind to hold a JSON export of our article. Ideally this container would show only a incipit (short preview) of the JSON and also be clickable to allow easy selection of the text it holds. What kind of element could we use for this? -->
+        <label id="export-field" class="pull-right">
+          <input type="text" id="article-json" readonly >
+          When your article is ready, copy the JSON above and paste that stuff into your blogArticles.js
+        </label>
       </section>
 
     </main>
